# OOP-LAB4

./: CMakeLists.txt  README.md
include/: array.h  figure.h  hexagon.h  octagon.h  point.h  triangle.h
src/: main.cpp
test/: test.cpp
